# wscript

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/skills/wscript/: SKILL.md
.claude/skills/wscript/references/: concept_containers.md  concept_control_flow.md  concept_derives.md  concept_embedding.md  concept_enums.md  concept_faults.md  concept_functions.md  concept_interface_files.md  concept_interop_types.md  concept_memory.md  concept_modules.md  concept_operators.md  concept_options_results.md  concept_pattern_matching.md  concept_reference_semantics.md  concept_strings.md  concept_structs.md  concept_traits.md  concept_type_system.md  concept_values.md  entity_wcl.md  entity_wscript.md  fact_cli_commands.md  fact_crates.md  fact_data_formats.md  fact_fs_functions.md  fact_list_methods.md  fact_map_methods.md  fact_math_functions.md  fact_milestones.md  fact_not_in_v1.md  fact_operator_traits.md  fact_option_result_methods.md  fact_prelude_functions.md  fact_primitive_types.md  fact_process_functions.md  fact_reference_types.md  fact_string_methods.md  fact_value_methods.md  process_check_script.md  (+5 more)
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
docs/: PRD.md  benchmarks.md  embedding.md  main.wcl  stdlib.md  tour.md
docs/pages/wscript/: features.wcl  getting-started.wcl  index.wcl
docs/wskills/wscript/: README.md  justfile  wskill.wcl
docs/wskills/wscript/data/: indexes.wcl  main.wcl
docs/wskills/wscript/data/concept/: containers.wcl  control_flow.wcl  derives.wcl  embedding.wcl  enums.wcl  faults.wcl  functions.wcl  interface_files.wcl  interop_types.wcl  main.wcl  memory.wcl  modules.wcl  operators.wcl  options_results.wcl  pattern_matching.wcl  reference_semantics.wcl  strings.wcl  structs.wcl  traits.wcl  type_system.wcl  values.wcl
docs/wskills/wscript/data/entity/: main.wcl  wcl.wcl  wil_taylor.wcl  wscript.wcl
docs/wskills/wscript/data/fact/: cli_commands.wcl  crates.wcl  data_formats.wcl  fs_functions.wcl  list_methods.wcl  main.wcl  map_methods.wcl  math_functions.wcl  milestones.wcl  not_in_v1.wcl  operator_traits.wcl  option_result_methods.wcl  prelude_functions.wcl  primitive_types.wcl  process_functions.wcl  reference_types.wcl  string_methods.wcl  value_methods.wcl
docs/wskills/wscript/data/process/: check_script.wcl  embed_wscript.wcl  expose_host_type.wcl  generate_interface.wcl  main.wcl  run_script.wcl  use_repl.wcl
docs/wskills/wscript/data/reference/: examples.wcl  glossary.wcl
docs/wskills/wscript/wdoc/book/: main.wcl
docs/wskills/wscript/wdoc/skill/: main.wcl
examples/: config_tool.wisp  config_tool.wscript  fib.wisp  fizzbuzz.wisp  shapes.wisp  tasklist.wisp  tasklist.wscript
tests/scripts/: m1_arithmetic.wisp  m1_control_flow.wisp  m1_fault_div_zero.wscript  m1_fault_stacktrace.wisp  m1_functions.wisp  m1_newlines.wscript  m1_strings.wisp  m2_closures.wscript  m2_containers.wisp  m2_enums_match.wscript  m2_exhaustiveness.wisp  m2_for_loops.wscript  m2_option_result.wisp  m2_strings.wscript  m2_structs.wisp  m3_derives.wscript  m3_operators.wscript  m3_rc_semantics.wisp  m3_traits.wisp  m5_fs.wisp  m5_fs.wscript  m5_json.wisp  m5_math.wscript  m5_process.wisp  m5_toml_xml.wisp  m5_toml_xml.wscript
wisp/: Cargo.toml
wisp-cli/: Cargo.toml
wisp-cli/src/: diag_render.rs  lsp.rs  main.rs  manifest.rs  repl.rs
wisp-cli/tests/: lsp.rs  scripts.rs  wispi_gen.rs
wisp-compiler/: Cargo.toml
wisp-compiler/src/: ast.rs  emit.rs  lexer.rs  lib.rs  parser.rs  token.rs  wispi.rs
wisp-compiler/src/check/: expr.rs  infer.rs  methods.rs  mod.rs  pat.rs
wisp-compiler/tests/: diags.rs  parser_golden.rs
wisp-core/: Cargo.toml
wisp-core/src/: bytecode.rs  defs.rs  diag.rs  host.rs  lib.rs  module.rs  span.rs  types.rs  value.rs
wisp-macros/: Cargo.toml
wisp-macros/src/: lib.rs
wisp-std/: Cargo.toml
wisp-std/src/: fs_mod.rs  json_mod.rs  lib.rs  math_mod.rs  process_mod.rs  toml_mod.rs  value.rs  xml_mod.rs
wisp-std/wispi/: std.wispi
wisp-vm/: Cargo.toml
wisp-vm/src/: builtins.rs  lib.rs  ops.rs
wisp/examples/: host_app.rs
wisp/src/: interface.rs  lib.rs
wisp/tests/: interop.rs
wscript/: Cargo.toml
wscript-cli/: Cargo.toml
wscript-cli/src/: diag_render.rs  lsp.rs  main.rs  manifest.rs  repl.rs
wscript-cli/tests/: lsp.rs  scripts.rs  wscripti_gen.rs
wscript-compiler/: Cargo.toml
wscript-compiler/src/: ast.rs  emit.rs  lexer.rs  lib.rs  parser.rs  token.rs  wscripti.rs
wscript-compiler/src/check/: expr.rs  infer.rs  methods.rs  mod.rs  pat.rs
wscript-compiler/tests/: diags.rs  parser_golden.rs
wscript-core/: Cargo.toml
wscript-core/src/: bytecode.rs  diag.rs  host.rs  lib.rs  module.rs  registry.rs  types.rs
wscript-macros/: Cargo.toml
wscript-macros/src/: lib.rs
wscript-std/: Cargo.toml
wscript-std/src/: fs_mod.rs  json_mod.rs  lib.rs  math_mod.rs  process_mod.rs  toml_mod.rs  value.rs  xml_mod.rs
wscript-std/wscripti/: std.wscripti
wscript-vm/: Cargo.toml
wscript-vm/src/: builtins.rs  lib.rs  ops.rs
wscript/examples/: host_app.rs
wscript/src/: interface.rs  lib.rs
wscript/tests/: interop.rs
