[package]
name = "wscript-benchmarks"
description = "Microbenchmarks: wscript vs Lua (mlua), Rhai, Rune (PRD §10 M7)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "wscript-bench"
path = "src/main.rs"

[dependencies]
wscript.workspace = true
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rhai = "1"
rune = "0.14"
