[package]
name = "wisp-cli"
description = "wisp command-line interface: run, check, repl, lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wisp"
path = "src/main.rs"

[dependencies]
wisp.workspace = true
wisp-std.workspace = true
ariadne = "0.4"

[dev-dependencies]
wisp-compiler.workspace = true
