[package]
name = "wisp-cli"
description = "wisp command-line interface: run, check, repl, lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wisp"
path = "src/main.rs"

[dependencies]
wisp.workspace = true
wisp-std.workspace = true
wisp-compiler.workspace = true
ariadne = "0.4"
rustyline = "14"
toml = "0.8"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }

[dev-dependencies]
wisp-compiler.workspace = true
wisp-vm.workspace = true
