[package]
name = "wisp"
description = "wisp: an embeddable, statically typed scripting language for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wisp-core.workspace = true
wisp-compiler.workspace = true
wisp-vm.workspace = true
wisp-macros.workspace = true
