[package]
name = "wisp"
description = "wisp: an embeddable, statically typed scripting language for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
# Re-export wisp-std (PRD §2); disable for minimal embeddings.
std = ["dep:wisp-std"]

[dependencies]
wisp-core.workspace = true
wisp-compiler.workspace = true
wisp-vm.workspace = true
wisp-macros.workspace = true
wisp-std = { workspace = true, optional = true }
