[package]
name = "wscript-std"
description = "wscript standard library modules (capability-style, feature-gated)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["math", "fs", "process", "json", "toml", "xml"]
math = []
fs = []
process = []
# json/toml/xml share the dynamic Value type (always compiled in).
json = ["dep:serde_json"]
toml = ["dep:toml"]
xml = ["dep:quick-xml"]

[dependencies]
wscript-core.workspace = true
wscript-macros.workspace = true
serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
quick-xml = { version = "0.37", optional = true }
